# Diagent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_initial_tables.py  002_add_runs_error_column.py
diagent/: __init__.py  config.py  database.py
diagent/adapters/: __init__.py
diagent/adapters/demo_support_bot/: __init__.py  agent.py
diagent/adapters/pathfinder_ship/: __init__.py
diagent/api/: app.py
diagent/api/routes/: alerts.py  diagnoses.py  evaluations.py  health.py  runs.py
diagent/core/: __init__.py  anomaly_detector.py  diagnostician.py  rag_quality.py  tracer.py
diagent/models/: __init__.py  agent.py  alert.py  base.py  diagnosis.py  evaluation.py  retrieval.py  run.py  span.py  tool_call.py
diagent/schemas/: __init__.py
diagent/workers/: __init__.py  celery_app.py  tasks.py
docs/: INTEGRATION_GUIDE.md  SCHEMA.md  test_worker.md
scripts/: seed_demo_data.py  seed_synthetic_data.py
tests/: conftest.py  test_agent_health.py  test_alerts.py  test_detector_cost_spike.py  test_detector_empty_retrieval.py  test_detector_latency_spike.py  test_detector_stale_data.py  test_detector_tool_failure.py  test_detector_tool_loop.py  test_diagnostician.py  test_rag_evaluation.py  test_runs.py  test_span_validation.py  test_tracer_decorator.py
