[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagent"
version = "0.1.0"
description = "Self-hosted AI agent and RAG observability backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["diagent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

